fix: Correct row gap in topic list item
The row gap in the topic list item was incorrectly set. This commit fixes the gap.

--- a/common/common.scss
+++ b/common/common.scss
@@ -391,7 +391,7 @@
       "thumbnail title"
       "thumbnail details";
     column-gap: 0.75em;
-    row-gap: 0.25em;
+    row-gap: 0.5em;
     align-items: start;
   }
 
